# unused-funcs

./: CMakeLists.txt  Finder.cpp  FuncInfo.cpp  FuncInfo.hpp  README.md  RefInfo.hpp  unused-funcs.cpp
src/: Finder.cpp  Finder.hpp  FuncInfo.cpp  FuncInfo.hpp  RefInfo.cpp  RefInfo.hpp  unused-funcs.cpp
tests/: func-ptr.c  main.c  util.c
